Added Action Handling to Redo/Undo Commands.